# arewevarietyyet

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  format.yml
src/: data_actor.rs  datetime.rs  helpers.rs  main.rs  model.rs  streamcounter.rs  sullygnome.rs
static/: index.css  inter.css
templates/: details.hbs.html  ditch-stats.hbs.html  index.hbs.html  last-year.hbs.html  skeleton.hbs.html  this-year.hbs.html  years.hbs.html
