[package]
name = "arewevarietyyet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.20"
handlebars = "4.2"
reqwest = { version = "0.11", features = ["native-tls"] }
lazy_static = "1"
actix-files = "0.6.0-beta.15"
actix = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.5"
