[package]
name = "arewevarietyyet"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
handlebars = { version = "5.1", features = ["dir_source"] }
reqwest = { version = "0.11", features = ["native-tls", "json"] }
lazy_static = "1"
actix-files = "0.6"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
tokio = "1.35"
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
