[package]
name = "arewevarietyyet"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
handlebars = { version = "6.1", features = ["dir_source"] }
reqwest = { version = "0.12", features = ["native-tls", "json"] }
lazy_static = "1"
actix-files = "0.6"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.11"
tokio = "1.40"
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
